--- a/style.css
+++ b/style.css
@@ -154,6 +154,18 @@ body{
   background:url("tape.png") center/contain no-repeat;
   pointer-events:none;
 }
+#photos{
+  margin-top:70px;
+  display:flex;
+  gap:35px;
+  opacity:0;
+  transition:1.5s ease;
+}
+#photos{
+  justify-content:center;
+  flex-wrap:wrap;
+}
+
 
 /* ---------------- ENDING ---------------- */
 
